--- a/Changes
+++ b/Changes
@@ -1,5 +1,12 @@
 Revision history for Sys-Run-Safer
 
+0.02    2014-12-18 (PERLANCAR)
+
+	- No functional changes.
+
+	- [pod] Fix example in Synopsis.
+
+
 0.01     2014-12-18 (PERLANCAR)
 
          - First release.
