--- a/Changes
+++ b/Changes
@@ -1,5 +1,12 @@
 Revision history for Sys-Run-Safer
 
+0.03    2014-12-24 (PERLANCAR)
+
+	- No functional changes.
+
+	- Mention some other alternative modules [RT#101074].
+
+
 0.02    2014-12-18 (PERLANCAR)
 
 	- No functional changes.
