--- a/README
+++ b/README
@@ -2,8 +2,8 @@ NAME
     Sys::Run::Safer - Run external commands, with a safer API
 
 VERSION
-    This document describes version 0.02 of Sys::Run::Safer (from Perl
-    distribution Sys-Run-Safer), released on 2014-12-18.
+    This document describes version 0.03 of Sys::Run::Safer (from Perl
+    distribution Sys-Run-Safer), released on 2014-12-24.
 
 SYNOPSIS
      use Sys::Run::Safer qw(run);
@@ -86,7 +86,29 @@ SEE ALSO
 
     Perl's "system()" documentation ("perldoc -f system").
 
-    IPC::System::Simple.
+    There are lots and lots of CPAN modules dealing with running external
+    commands. Some offer only improvement/alternative for Perl's "system()",
+    others provide extra features (from feeding input and capturing output,
+    timeout, adding logging/debugging, retry, and so on). I'll limit here to
+    listing the modules of the former group:
+
+    *   IPC::System::Simple
+
+        Provides a separate function "systemx()" which never invokes the
+        shell. Also provides run() and runx() which dies on failure instead
+        of just returning non-zero.
+
+    *   IPC::Run
+
+        Recommended over the core IPC::Cmd. "IPC::Run"'s "run()" won't run
+        shell if you feed it arrayref (e.g. "<run ["ls"]"> instead of "<run
+        "ls""> even though there is only one element in the array (i.e.
+        "<run ["ls -l"]"> or "<run ["ls | sort"]"> won't work). While
+        "IPC::Cmd"'s "run" will still run shell in the latter case, just
+        like Perl's "system()".
+
+        Note that "IPC::Run" also has extra features for controlling the
+        child process, and is used by some other modules as a backend.
 
 HOMEPAGE
     Please visit the project's homepage at
